Added data to about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,8 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="/img/me.png">
+        <p>this site is created by venu madhav and it uses data from mapbox and darksky net.</p>
+                <img class="portrait" src="/img/me.png">
     </div>
     
     {{>footer}}
